# ChangeLog for app-editors/emacs
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs/ChangeLog,v 1.216 2007/11/27 18:48:54 armin76 Exp $

  27 Nov 2007; Raúl Porcel <armin76@gentoo.org> emacs-21.4-r14.ebuild,
  emacs-22.1-r3.ebuild:
  alpha/ia64/sparc stable

  27 Nov 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  emacs-21.4-r14.ebuild, emacs-22.1-r3.ebuild:
  ppc stable, bug #200297

  27 Nov 2007; Markus Rothe <corsair@gentoo.org> emacs-21.4-r14.ebuild,
  emacs-22.1-r3.ebuild:
  Stable on ppc64; bug #200297

  27 Nov 2007; Jeroen Roovers <jer@gentoo.org> emacs-22.1-r3.ebuild:
  Dropping compiler optimisations to -O1 for hppa (solves bug #193703).

  26 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-21.4-r14.ebuild, emacs-22.1-r3.ebuild:
  stable x86

  26 Nov 2007; Jeroen Roovers <jer@gentoo.org> emacs-22.1-r3.ebuild:
  Stable for HPPA.

  26 Nov 2007; Jeroen Roovers <jer@gentoo.org> emacs-21.4-r14.ebuild:
  Stable for HPPA.

*emacs-22.1-r3 (25 Nov 2007)
*emacs-21.4-r14 (25 Nov 2007)

  25 Nov 2007; Ulrich Mueller <ulm@gentoo.org>
  +files/emacs-22.1-format-int.patch, +emacs-21.4-r14.ebuild,
  +emacs-22.1-r3.ebuild:
  Correctly format integer values, SuSE bug 342158. Patch from upstream CVS,
  partially backported to Emacs 21.

  22 Nov 2007; Ulrich Mueller <ulm@gentoo.org> emacs-22.1-r2.ebuild:
  Fix alsa dependency, thanks Flameeyes for pointing this out.

  14 Nov 2007; Brent Baude <ranger@gentoo.org> emacs-21.4-r13.ebuild:
  Marking emacs-21.4-r13 ppc64 stable for bug 197313

  14 Nov 2007; Ulrich Mueller <ulm@gentoo.org> emacs-21.4-r13.ebuild:
  Stable on amd64, bug #197313.

  06 Nov 2007; Ulrich Mueller <ulm@gentoo.org> -emacs-22.1-r1.ebuild:
  Remove vulnerable revision wrt bug #197958.

  06 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org> emacs-22.1-r2.ebuild:
  Stable on amd64 wrt bug #197958.

  05 Nov 2007; Tobias Scherbaum <dertobi123@gentoo.org>