@@ -8,14 +8,12 @@ AUX emacs-22.1-hack-local-variables.patch 561 RMD160 248f09898369161dcd0e3148c7f
 AUX emacs-22.1-oldxmenu-qa.patch 448 RMD160 ac5b0e57569f0963862ded46953be899fb637590 SHA1 10887f5e0ccebde6715307fdc59faa8f826dd597 SHA256 3039fa8eedc22c638e706123bd1affb0f736a53bf0ebc68566678ead92a4c590
 DIST emacs-21-patches.tar.bz2 8891 RMD160 ca0a44cc0d6e81fb245eb4f6069dd49550a9c55f SHA1 592c47434288a5c3672110acf4f36ab2072c19ae SHA256 456af3ed5bcfa99af3fd67c281e391ca1b67599aed0cfd470adca8b34240d914
 DIST emacs-21.4-patches-1.tar.bz2 9598 RMD160 a838e9d49fbc23e2c7f000a96fca06f0e347ab47 SHA1 ef15a55f94fc01e99cc386273bebdfe363efe15c SHA256 75c8a3d9f420e9ab3f426b39b0f73299a22d399415cbd4190dfda63b6e65f3a1
-DIST emacs-21.4-patches.tar.bz2 9434 RMD160 fe05c6a0fd8b7c8d610d8992e8125446926f750e SHA1 81fe49207325c867a7184b23ad6976e6720e1bb4 SHA256 238986441bec629ffd810a74700b2c8276e4b1e42a71fa614a9f2eab839d6ca3
 DIST emacs-21.4a.tar.gz 20403483 RMD160 c312e739935b56d08783bbfe97992297a363cb8a SHA1 cdb33731180fe4a912838af805dd35e3f55394d4 SHA256 1d50ddae117c48d689a3d772e390569edccfdc22168be0112d2093bd2d7c3216
 DIST emacs-22.1.tar.gz 38172226 RMD160 da5360871db8b1d473ff7f0b0937ee6c278c0b19 SHA1 327664173eabe5db49d4e7e4a4b1794577af902e SHA256 1ec43bef7127e572f92d7c3a846951cf8e263e27445c62c867035f94681c3ed0
 DIST leim-21.4.tar.gz 3291433 RMD160 89e1108bfe06425a0d6b4d941f9c297551bafcca SHA1 dd63f9aca1a58d40d9d426dd410fb627230974f7 SHA256 db24946985dd644bfed18815d6e991dad27f8ab1fd5823dd6dc4eb8dcd04333b
 EBUILD emacs-21.4-r12.ebuild 6213 RMD160 506867c6a75ee891003712530b55352725b3fb9b SHA1 9f99f97ece392d48076240bfa511709489303840 SHA256 a04c8b8a3580545e7966323b7089bd607c32cb990b5356c12c0e34a7443115f6
-EBUILD emacs-21.4-r13.ebuild 5573 RMD160 ba6487772e516bd672b3064bc943ba46819c7757 SHA1 45261278836c513eb7c18ed3a51b478b4e36197e SHA256 8214188b36f1b9b8a9d977f49bb8583d87da1ed9aa299c4bf4b960135a627153
-EBUILD emacs-21.4-r14.ebuild 5579 RMD160 4a8ed646a03973981e3cbf322f2ec2438558dcb7 SHA1 a9be300f616f8847ed94537b659e4e693db2d4ee SHA256 6587d70ed9be68984072858b2b182fef895729df1729e7f5e20275284340933e
+EBUILD emacs-21.4-r14.ebuild 5576 RMD160 fac73e9d34817cd27a08288016ebee7c5c6cb656 SHA1 444f02c5bf2898904c36c9131b875f89d03e7547 SHA256 d4ad29833c18810000cda387a4b7dd0e877bb1f87d570a9dcfb9b8317f7220a8
 EBUILD emacs-22.1-r2.ebuild 7721 RMD160 071e0075d9036274c5ae0e21bddef1994f50c742 SHA1 81c2455b4bc5041acbdec2e06aa6d6dce3a885f5 SHA256 28a321f056a0347a266e6f5e86f2cec9fda7943610deafa420d48a1e86284cd7
-EBUILD emacs-22.1-r3.ebuild 7840 RMD160 bf15345657dee3a04a4b90037fffe79ef3291319 SHA1 565c02151fbe23a758edfa4b8f1b63dace5e497d SHA256 f696a45fe615240c3612647d39901d36e3a12f1029063e263972ca5f2dbe28d0
-MISC ChangeLog 31966 RMD160 6a482c3d3c2c7e838e5c1b873db8f5da3ba2045d SHA1 096cdd76e7584bf3ce176ecb4c0d87112d533160 SHA256 774100ccba1e38ba8fa9345ca9e2afdff5edfa9abe45c1575bc3dbb3cd3130e0
+EBUILD emacs-22.1-r3.ebuild 7837 RMD160 0fe2fedb62f22976c340268f5ca6b5c22f8b3135 SHA1 703c6e8439626bdb47e89625d58236d7312d63f4 SHA256 3259913c3e68739a2958dfd40fec76ac29826fbba3b92ab5f11f3b6f671c3ffa
+MISC ChangeLog 32189 RMD160 28986c36c1de8d0301d61a1449fe75485b9f98e6 SHA1 dfcc35e69f8d902fa9258a9436dc630e0cc5403b SHA256 1d576e45c8e4555351114360abf4a7719d43b13fafc4bc34dd417ba57276a2de
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
