@@ -1,6 +1,14 @@
 # ChangeLog for app-editors/emacs
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs/ChangeLog,v 1.216 2007/11/27 18:48:54 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs/ChangeLog,v 1.218 2007/11/28 21:49:35 ulm Exp $
+
+  28 Nov 2007; Ulrich Mueller <ulm@gentoo.org> -emacs-21.4-r13.ebuild,
+  -emacs-22.1-r2.ebuild:
+  Remove old.
+
+  28 Nov 2007; <welp@gentoo.org> emacs-21.4-r14.ebuild,
+  emacs-22.1-r3.ebuild:
+  Stable on amd64, thanks angelos.
 
   27 Nov 2007; Raúl Porcel <armin76@gentoo.org> emacs-21.4-r14.ebuild,
   emacs-22.1-r3.ebuild:
